<resources>
  <string name="version">2.9.4</string>
  <string name="app_name">HappyContacts</string>
  <string name="no_contacts">No contacts</string>
  <string name="exit">Exit</string>
  <string name="next">Next</string>
  <string name="nottoday">No</string>
  <string name="call">Yes</string>
  <string name="later">Later</string>
  <string name="never">Never</string>
  <string name="happyfeast">It\'s his/her name day !</string>
  <string name="whattodo">Do you want contact this person \?</string>
  <string name="blacklist_label">Click on an item to delete the contact from black list.</string>
  <string name="last_wish_date">Last wished date : %s</string>
  <string name="name_list_title">Name days list on %s</string>
  <string name="date_list_title">Name day(s) for %s</string>
  <string name="pref_feast_list">Browse/Edit name days</string>
  <string name="no_feast">No name day this day</string>
  <string name="pref_feast_list_summary">Display or edit the name days per name or per day</string>
  <string name="pref_templates_cat">Templates</string>
  <string name="pref_template_sms">SMS templates</string>
  <string name="pref_template_sms_summary">SMS body to send</string>
  <string name="pref_template_email">Email templates</string>
  <string name="pref_template_email_summary">Email subject and body to send</string>
  <string name="pref_blacklist">Black list</string>
  <string name="pref_blacklist_summary">Contacts list which are ignored</string>
  <string name="pref_alarm">Alarm</string>
  <string name="pref_alarm_on">Automatic checking events is enabled</string>
  <string name="pref_alarm_off">Automatic checking events is disabled</string>
  <string name="pref_time">Hour</string>
  <string name="pref_time_summary">Every day at %s</string>
  <string name="pref_template_sms_dialog">Enter SMS template</string>
  <string name="pref_template_email_dialog">Enter email templates</string>
  <string name="toast_contact_blacklisted">Contact is blacklisted</string>
  <string name="toast_blacklisted">%s has been added to the black list</string>
  <string name="toast_later">The notification is kept for later.</string>
  <string name="toast_no_events">No events today !</string>
  <string name="toast_finish">Today\'s name days have been completed.</string>
  <string name="enter_date">Enter a date</string>
  <string name="check_contacts">Check the contacts</string>
  <string name="loading_data">The database is being created, this will occurs only one time...</string>
  <string name="updating_data">The database is being updated...</string>
  <string name="notif_new_event">It\'s %s\'s name day !</string>
  <string name="notif_new_event_multi">There is some name days to wish today !</string>
  <string name="notif_one_or_more">There is something to wish today !</string>
  <string name="enter_name">Enter a name</string>
  <string name="ok">Ok</string>
  <string name="cancel">Cancel</string>
  <string name="no_feast_for_name">No name days found for this name</string>
  <string name="please_wait">Please wait</string>
  <string name="contact_method_dialog_title">%s can be contacted with</string>
  <string-array name="contactmethods_items">
    <item>Call</item>
    <item>SMS</item>
    <item>Email</item>
  </string-array>
  <string name="contact_method_not_supported">No supported contact method found for this contact.</string>
  <string name="default_mail_subject_tempate">There is something to wish today !...</string>
  <string name="default_mail_body_template">It seems it\'s your day today ! Happy name day !</string>
  <string name="default_sms_body_template">It\'s your day today... Happy name day !</string>
  <string name="default_mail_birthday_subject_template">There is something to wish today !...</string>
  <string name="default_mail_birthday_body_template">It seems it\'s your day today ! Happy birthday !</string>
  <string name="default_sms_birthday_body_template">It\'s your day today... Happy birthday !</string>
  <string name="back_to_main">Back to main menu</string>
  <string name="sms_template_text">Edit name-day SMS template</string>
  <string name="mail_template_subject">Object : </string>
  <string name="mail_template_text">Edit name-day email template</string>
  <string name="reset_button">default</string>
  <string name="toast_mail_template_saved">Email templates saved</string>
  <string name="toast_sms_template_saved">SMS templates saved</string>
  <string name="feast_counter">%1$d/%2$d</string>
  <string name="happyfeast_name">It\'s his/her name day :</string>
  <string name="pref_check_name_days">Check today events</string>
  <string name="pref_check_name_days_summary">Perform a manual check of the day\'s events</string>
  <string name="pref_data_cat">Database</string>
  <string name="about_content">
    <a href="http://kamosoft.wordpress.com">Kamosoft</a>
    (c) 2010
  </string>
  <string name="about">About</string>
  <string name="sendmail">Send mail with...</string>
  <string name="dateback">&lt;</string>
  <string name="datenext">&gt;</string>
  <string name="add">Add</string>
  <string name="no_whitelist">No white listed contact</string>
  <string name="pref_whitelist">White list</string>
  <string name="pref_whitelist_summary">Link a contact to a name-day (usefull for contacts with nickname)</string>
  <string name="empty_name">Please enter a name</string>
  <string name="whitelist_added">%s has been added to white list</string>
  <string name="pick_contact_nickname">1. Pick a contact with a nickname</string>
  <string name="pick_nameday">2. Pick a name day for %s</string>
  <string name="confirm_delete_whitelist">Are you sure you want to delete link between %1$s and %2$s ?</string>
  <string name="confirm_delete_blacklist">Are you sure you want to delete %s from blacklist ?</string>
  <string name="deleteall">Delete all</string>
  <string name="confirm_deleteall">Do you really want to delete all ?</string>
  <string name="type_to_filter">Type to filter</string>
  <string name="add_whitelist">Link a contact to a name-day</string>
  <string name="can_match_normally">%1$s can already be matched to name-day %2$s, so it\'s useless to add this
    link to the white list.</string>
  <string name="link_other">Link an other</string>
  <string name="pref_birthday">Birthdays</string>
  <string name="pref_birthday_summary">Retrieve all your friends\' birthday from Google Contacts or Facebook
  </string>
  <string name="login_thankyou">You\'re now logged to Facebook</string>
  <string name="facebooklogin_urlError">Error when trying to connect to Facebook</string>
  <string name="login_authorization">Please wait while verifying application authorization...</string>
  <string name="facebooklogin">Login to Facebook</string>
  <string name="contact_not_found">Phone contact not found</string>
  <string name="no_birthday">No birthday in the database</string>
  <string name="add_birthday">Add a birthday</string>
  <string name="sync_facebook">Sync with Facebook</string>
  <string name="no_syncresults">No sync results</string>
  <string name="start_sync">Start synchronisation</string>
  <string name="store_birthdays">Store birthdays</string>
  <string name="confirm_delete_birthday">Do you really want to delete %s birthday ?</string>
  <string name="unknow_birthday">Birthday not provided</string>
  <string name="pick_birthday_label">Pick birthday date for %s</string>
  <string name="birthday_added">Birthday added successfully</string>
  <string name="pick_contact_birthday">Pick a contact</string>
  <string name="pick_birthday_update_label">Update birthday date for %s</string>
  <string name="birthday_updated">Birthday updated successfully</string>
  <string name="birthday_deleted">Birthday deleted successfully</string>
  <string name="delete">Delete</string>
  <string name="update">Update</string>
  <string name="pick_nameday_datelist">Enter or pick a name day</string>
  <string name="happybirthday_name">It\'s his/her birthday :</string>
  <string name="mail_birthday_template_text">Edit birthday email template</string>
  <string name="sms_birthday_template_text">Edit birthday SMS template</string>
  <string name="loading_friends">Retrieving Facebook friends, please wait...</string>
  <string name="sync_friends">Synchronizing %s...</string>
  <string name="end_sync">Sync is finishing...</string>
  <string name="inserting_results">Displaying results...</string>
  <string name="inserting_birthdays">Recording %d birthday(s)...</string>
  <string name="age">%d years old</string>
  <string name="age_unknow">\? years old</string>
  <string name="facebook_login_error">Sorry, unable to login to Facebook</string>
  <string name="link_contact">Link to a contact</string>
  <string name="unlink_contact">Unlink this contact</string>
  <string name="link_contact_alert">%1$s is already linked to %2$s, are you sure to link to another contact ?
  </string>
  <string name="link_contact_done">%1$s is now linked to %2$s</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="unlink_contact_useless">This friend has no linked contact, no need to unlink</string>
  <string name="pick_contact_to_link">Pick a contact to link to friend %s</string>
  <string name="syncresults">Synchronization results</string>
  <string name="birthdaylist">Birthdays list</string>
  <string name="friend_no_birthday">This friend doesn\'t provide his brithday</string>
  <string name="blacklist">Black list</string>
  <string name="contactlist">Contacts list</string>
  <string name="namedaylist">Name-days list</string>
  <string name="whitelist">White list</string>
  <string name="birthday_counter">birthday(s) recorded</string>
  <string name="sync_counter">friend(s) retrieved from Facebook</string>
  <string name="logout">Logout from Facebook</string>
  <string name="logout_ok">Logout from your Facebook account completed !</string>
  <string name="logout_ko">You\'re not logged to a Facebook account</string>
  <string name="linked_to">linked to contact %s</string>
  <string name="ignore_birthyear">Ignore year field (check if you don\'t know the birth year)</string>
  <string name="inserting_birthdays_done">%d birthday(s) recorded</string>
  <string name="confirm_store_question">Do you want to update existing birthdays with this results ?</string>
  <string name="socialuserdialog_title">Modify sync</string>
  <string name="toast_events">There is some events today ! Check the notification bar on top</string>
  <string name="sync_googlecontacts">Sync with Google Contacts</string>
  <string name="sync_google_counter">contact(s) with birthday retrieved from Google Contacts</string>
  <string name="google_birthdaylist">Google Contacts list</string>
  <string name="loading_googlecontacts">Retrieving Google contacts, please wait...</string>
  <string name="nextevents_counter">upcoming event(s)</string>
  <string name="nexteventslist">Upcoming events list</string>
  <string name="no_nextevents">No upcoming events</string>
  <string name="nameday">St %s</string>
  <string name="pref_nextevents">Upcoming events</string>
  <string name="pref_nextevents_summary">Show the list of the next upcoming events</string>
  <string name="retrieving_events">Retrieving upcoming events...</string>
  <string name="today">Today</string>
  <string name="tomorrow">Tomorow</string>
  <string name="pref_disable_nameday">Disable namedays</string>
  <string name="pref_disable_nameday_on">Namedays are disabled</string>
  <string name="pref_disable_nameday_off">Namedays are enabled</string>
  <string name="done">Done</string>
  <string name="clear">X</string>
  <string name="blacklist_pick_contact_label">Check contacts then click the Done button to add them in the blacklist
  </string>
  <string name="hide">&gt;</string>
  <string name="ignore_year_field">you don\'t need to use the year field</string>
  <string name="enter_nameday">Name day : </string>
</resources>