<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  android:orientation="vertical">
 
    <Button android:text="@string/add_whitelist" android:id="@+id/add_whitelist"
      android:layout_width="fill_parent" android:layout_height="wrap_content" />
  <TextView android:text="@string/whitelist" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:textStyle="bold" 
    android:textColor="#DDDDDD" 
    android:background="#666666" 
    android:padding="4dip" 
    android:layout_marginTop="4dip" />
  <ListView android:id="@android:id/list" android:layout_width="fill_parent"
    android:layout_height="wrap_content" />
  <TextView android:id="@android:id/empty"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:text="@string/no_whitelist" />
</LinearLayout>
