<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:orientation="horizontal"
    android:background="@android:color/darker_gray" android:paddingTop="3dp">

		<Button android:id="@+id/dateback" android:text="@string/dateback"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button android:id="@+id/datenext" android:text="@string/datenext"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" />

	</LinearLayout>

	<ListView android:id="@android:id/list" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<TextView android:id="@android:id/empty" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/no_feast" 
    android:layout_gravity="center_horizontal" android:paddingTop="5dip"/>
</LinearLayout>
